Indexed the Image from a downloaded image in .jpg from the image folder

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Lasagna recipe</h1>
         <a href="../index.html">Home</a>
-        <img src="https://images.app.goo.gl/kVGYBCRHiTrC1nXf9">
+        <img src="./images/lasagna.jpg">
     </body>
 </html>
