--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Lasagna recipe</h1>
         <a href="../index.html">Home</a>
-        <img src="./images/lasagna.jpg">
+        
+        <img src="../images/Lasagna.jpg" alt="Image of a Prepared Lasagna" Height="1500" Width="750">
     </body>
 </html>
