Added a Description to our Image

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,9 @@
         <h1>Lasagna recipe</h1>
         <a href="../index.html">Home</a>
         
+        <figure>
         <img src="../images/Lasagna.jpg" alt="Image of a Prepared Lasagna" Height="1500" Width="750">
+        <figcaption> Picture of an Homemade Lasagna</figcaption>
+        </figure>
     </body>
 </html>
