Added the Ingredients and used an Unordered list for the listing

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,5 +12,8 @@
         <img src="../images/Lasagna.jpg" alt="Image of a Prepared Lasagna" Height="750" Width="750">
         <figcaption> Picture of an Homemade Lasagna</figcaption>
         </figure>
+
+        <p>This low-carb lasagna is made with zucchini slices instead of lasagna noodles for a hearty</p>
+        <p>and satisfying gluten-free beef lasagna. It's delicious and a real crowd-pleaser!</p>
     </body>
 </html>
