Added the Header for the Ingredients that I missed

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -16,6 +16,7 @@
         <P>This low-carb lasagna is made with zucchini slices instead of lasagna noodles for a hearty </P>
         <p>and satisfying gluten-free beef lasagna. It's delicious and a real crowd-pleaser!</p>
 
+        <h2><strong>Ingredients for making Lasagna</strong></h2>
         <ul>
             <li>cooking spray</li>
             <li>1 ½ large zucchinis, thinly sliced lengthwise</li>
@@ -32,7 +33,7 @@
             <li>¼ cup grated Parmesan cheese</li>
             <li>aluminum foil</li>
         </ul>
-        <h2><strong>Steps</strong></h2>
+        <h3><strong>Steps</strong></h3>
         <ol>
             <li> Preheat the oven to 375 degrees F (190 degrees C). Grease an 8-inch square baking dish with cooking spray. </li>
             <li> Pat dry zucchini slices with a paper towel to remove excess moisture. Set aside. </li>
