--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html" alt="Image of an Homemade Lasagna" Height="750" Width="750">Lasagna Recipes</a>
+        <a href="./recipes/lasagna.html">Lasagna recipe</a>
+        <a href="./recipes/">Noodles Recipe</a>
     </body>
 </html>
