--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">Lasagna recipe</a>
-        <a href="./recipes/">Noodles Recipe</a>
+        <a href="./recipes/noodles.html">Noodles Recipe</a>
     </body>
 </html>
