--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -9,7 +9,7 @@
         <a href="../index.html">Home</a>
         
         <figure>
-        <img src="Buttred noodles.jpg" alt="Picture of an Homemade Buttered Noodles" height="750" width="750">
+        <img src="Buttered noodles.jpg" alt="Picture of an Homemade Buttered Noodles" height="750" width="750">
         <figcaption>Picture of Homemade Buttered Noodles</figcaption>
         </figure>
 
@@ -19,11 +19,18 @@
         <p>chicken, or meatballs. It's such a delicious recipe, yet I get many questions on how to make it.</p>
 
         <h2><strong>Ingredient</strong></h2>
+
         <ul>
             <li>1 (16 ounce) package fettuccine noodles</li>
             <li>6 tablespoons butter, cut into pieces</li>
             <li>⅓ cup grated Parmesan cheese</li>
             <li>salt and ground black pepper to taste</li>
         </ul>
+        
+        <h3><strong>Steps</strong></h3>
+
+        <ol>
+            <li>git</li>
+        </ol>
     </body>
 </html>
