noodles recipes page update again

--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -9,7 +9,7 @@
         <a href="../index.html">Home</a>
         
         <figure>
-        <img src="Buttered noodles.jpg" alt="Picture of an Homemade Buttered Noodles" height="750" width="750">
+        <img src="./images/Buttered noodles.jpg" alt="Picture of an Homemade Buttered Noodles" height="750" width="750">
         <figcaption>Picture of Homemade Buttered Noodles</figcaption>
         </figure>
 
