--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -30,7 +30,11 @@
         <h3><strong>Steps</strong></h3>
 
         <ol>
-            <li>git</li>
+            <li>Gather all ingredients.</li>
+            <li>Fill a large pot with lightly salted water and bring to a rolling boil.</li>
+            <li>Stir in fettuccine, bring back to a boil, and cook pasta over medium heat until tender yet firm to the bite, 8 to 10 minutes.</li>
+            <li>Drain and return pasta to pot. Mix butter, Parmesan cheese, salt, and pepper into pasta until evenly combined.</li>
+            <li>Serve hot and enjoy!</li>
         </ol>
     </body>
 </html>
