--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">Lasagna recipe</a>
         <a href="./recipes/noodles.html">Noodles Recipe</a>
+        <a href="./recipes/alfredopasta.html">Alfredo pasta Recipe</a>
     </body>
 </html>
