Updated from Ordinary Alfreso to Shrimp Alfredo Pasta

--- a/recipes/alfredopasta.html
+++ b/recipes/alfredopasta.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lanf="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Alfredo Pasta Recipe</title>
@@ -9,13 +9,30 @@
         <h1>Alfredo Pasta Recipe</h1>
         <a href="../index.html">Home</a>
         <figure>
-        <img src="../images/Alfredo pasta.jpeg" alt="Picture of an Alfredo Pasta" Height="750" width="750">
-        <figcaption>Picture of an Homemade Alfredo Pasta</figcaption>
+        <img src="../images/Alfredo Pasta.jpg" alt="Picture of a Shrimp Alfredo Pasta" Height="750" width="750">
+        <figcaption>Picture of an Homemade Shrimp Alfredo Pasta</figcaption>
         </figure>
+
+        <p>A wonderful shrimp pasta dish! I came up with this on my own one night.</p>
+        <p>You can change the amount of ingredients to your taste.</p>
 
         <h2><strong>Ingredient</strong></h2>
         <ul>
-            <li></li>
+            <li>1 (16 ounce) jar Alfredo-style pasta sauce</li>
+            <li>1 (16 ounce) package angel hair pasta</li>
+            <li>2 pounds fresh shrimp, peeled and deveined</li>
+            <li>1 cup butter, melted</li>
+            <li>½ small green bell pepper, diced</li>
+            <li>½ small red onion, finely chopped</li>
+            <li>1 teaspoon garlic powder</li>
+            <li>½ teaspoon ground cumin</li>
         </ul>
+
+        <h3><strong>STEPS</strong></h3>
+        <ol>
+            <li>In a saucepan over low-temperature, heat the Alfredo sauce. Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 minutes or until al dente; drain.</li>
+            <li> Boil shrimp in a large pot of water until they turn orange. Then place in bowl with melted butter. Let shrimp marinate for 15 to 30 minutes; remove. In a large skillet over medium heat, saute the green pepper and onion in a small amount of oil.  Boil shrimp in a large pot of water until they turn orange. Then place in bowl with melted butter. Let shrimp marinate for 15 to 30 minutes; remove. In a large skillet over medium heat, saute the green pepper and onion in a small amount of oil.</li>
+            <li>Mix together the cooked pasta, shrimp, pepper-onion mixture and Alfredo sauce. Season with garlic powder and cumin. </li>
+        </ol>
     </body>
 </html>
