Trying to style all docs but it is not working

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,16 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Lasagna recipe</h1>
-        <a href="../index.html">Home</a>
+        <div>
+            <h1>Lasagna recipe</h1>
+            <a href="../index.html">Home</a>
+        </div>
         
-        <figure>
-        <img src="../images/Lasagna.jpg" alt="Image of a Prepared Lasagna" Height="750" Width="750">
-        <figcaption> Picture of an Homemade Lasagna</figcaption>
-        </figure>
+        <div>
+            <figure>
+            <img src="../images/Lasagna.jpg" alt="Image of a Prepared Lasagna" Height="750" Width="750">
+            <figcaption> Picture of an Homemade Lasagna</figcaption>
+            </figure>
+        </div>
+        
 
         <P>This low-carb lasagna is made with zucchini slices instead of lasagna noodles for a hearty </P>
         <p>and satisfying gluten-free beef lasagna. It's delicious and a real crowd-pleaser!</p>
