--- a/recipes/alfredopasta.html
+++ b/recipes/alfredopasta.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Alfredo Pasta Recipe</title>
+        <link="stylesheet" href="style.css">
     </head>
 
     <body>
