Styling the Homepage

--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna recipe</a>
-        <a href="./recipes/noodles.html">Noodles Recipe</a>
-        <a href="./recipes/alfredopasta.html">Alfredo pasta Recipe</a>
+        <div>
+            <h1>Odin Recipes</h1>
+        </div>
+
+        <div>
+            <ul>
+                <a href="./recipes/lasagna.html">Lasagna recipe</a>
+                <a href="./recipes/noodles.html">Noodles Recipe</a>
+                <a href="./recipes/alfredopasta.html">Alfredo pasta Recipe</a>
+            </ul>
+        </div>
+
     </body>
 </html>
