--- a/recipes/alfredopasta.html
+++ b/recipes/alfredopasta.html
@@ -3,16 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Alfredo Pasta Recipe</title>
-        <link="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Alfredo Pasta Recipe</h1>
-        <a href="../index.html">Home</a>
-        <figure>
+        <div>
+            <h1>Alfredo Pasta Recipe</h1>
+            <a href="../index.html">Home</a>
+        </div>
+        
+        <div>
+            <figure>
         <img src="../images/Alfredo Pasta.jpg" alt="Picture of a Shrimp Alfredo Pasta" Height="750" width="750">
         <figcaption>Picture of an Homemade Shrimp Alfredo Pasta</figcaption>
         </figure>
+        </div>
 
         <p>A wonderful shrimp pasta dish! I came up with this on my own one night.</p>
         <p>You can change the amount of ingredients to your taste.</p>
