--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -2,17 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link="stylesheet" href="style.css">
     </head>
     
     <body>
-        <h1>Noodles Recipe</h1>
-        <a href="../index.html">Home</a>
+        <div>
+            <h1>Noodles Recipe</h1>
+            <a href="../index.html">Home</a>
+        </div>
         
-        <figure>
-        <img src="../images/Buttered Noodles.jpeg" alt="Picture of an Homemade Buttered Noodles" height="750" width="750">
-        <figcaption>Picture of Homemade Buttered Noodles</figcaption>
-        </figure>
+        <div>
+            <figure>
+            <img src="../images/Buttered Noodles.jpeg" alt="Picture of an Homemade Buttered Noodles" height="750" width="750">
+            <figcaption>Picture of Homemade Buttered Noodles</figcaption>
+            </figure>
+        </div>
 
         <p>Buttered noodles are simple to make with your favorite pasta, butter, Parmesan cheese,</p>
         <p>salt, and pepper for a quick and easy, kid-friendly dish. Fresh herbs and a little lemon juice</p>
