--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
     <body>
         <div>
-            <h1>Odin Recipes</h1>
+            <h1 class="title">Odin Recipes</h1>
         </div>
 
         <div>
-            <ul>
-                <a href="./recipes/lasagna.html">Lasagna recipe</a>
-                <a href="./recipes/noodles.html">Noodles Recipe</a>
-                <a href="./recipes/alfredopasta.html">Alfredo pasta Recipe</a>
+            <ul class="menu">
+                <li><a href="./recipes/lasagna.html">Lasagna recipe</a></li>
+                <li><a href="./recipes/noodles.html">Noodles Recipe</a></li>
+                <li><a href="./recipes/alfredopasta.html">Alfredo pasta Recipe</a></li>
             </ul>
         </div>
 
